# hs-digger

./: digger.cabal
src/: AStar.hs  GameField.hs  GameState.hs  Main.hs  ManualBot.hs  Pos.hs  QuadTree.hs  SearchBot.hs
